# mycflow

./: .gitignore  Cargo.toml  LICENSE  README.md  mycflow design.md
.github/workflows/: ci.yml
components/: README.md
components/aggregator/: Cargo.toml
components/aggregator/src/: lib.rs
components/sensor-sim/: Cargo.toml
components/sensor-sim/src/: lib.rs
compositions/: README.md  sensor-to-aggregator.topology.json  sensor-to-aggregator.wac
config/wkg/: wkg.toml
config/zenoh/: README.md  acl-template.json5
crates/host-dataflow/: Cargo.toml
crates/host-dataflow/src/: lib.rs
crates/mycflow-common/: Cargo.toml
crates/mycflow-common/src/: lib.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: main.rs
crates/placement-manager/: Cargo.toml
crates/placement-manager/src/: main.rs
deploy/docker/: Dockerfile.node-agent  Dockerfile.placement-manager  docker-compose.yml
deploy/k8s/: README.md
deploy/kubeedge/: README.md
docs/: 01 mycflow 基本概念.md  02 mycflow 機能設計.md  03 mycflow 開発計画.md
docs/adr/: 0000-template.md  0001-monorepo-structure.md  0002-exclude-atomvm-otp.md  README.md
tests/e2e/: README.md
wit/: README.md  container.wit  embedded.wit
